# Tidal

./: .ghc.environment.x86_64-darwin-8.6.3  .gitignore  .gitmodules  .hlint.yaml  .travis.yml  1010120111010&dbdbdbddbdgc  BootTidal-oldstyle.hs  BootTidal.hs  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ChangeLog  DaveSync.lhs  Dirt.hs  Gemfile  HACKING  HACKING.md  Kriole.hs  Parse.hs  Pattern.hs  README.md  Setup.hs  Strategies.hs  Stream.hs  Tempo.hs  TempoClient.hs  Time.hs  Utils.hs  V3.hs  _config.yml  cabal.project  docs.md  example.tidal  flake.nix  functions.md  getclockip.pl  getting_started.md  hacking.md  howtos.md  index.html  (+13 more)
.github/: FUNDING.yml
_data/: chapters.yml
_includes/: alert.html  bibliography.html
_layouts/: default.html
_patterns/: continuous-patterns.md  mapping-over.md  samples.md  (+5 more)
feedforward/: ChangeLog.md  README.md  Server.hs_bak  feedforward.cabal
feedforward/logs/: corey.json  luke.json  william.json
feedforward/logs/2018/02/21/: 233518-9344.txt
feedforward/logs/2018/02/22/: 095354-15271.txt  095423-15314.txt  095645-15412.txt  204240-16783.txt  204548-16988.txt  205701-17755.txt  210329-18230.txt  210428-18339.txt  210619-18375.txt  213905-19620.txt  213913-19652.txt  214033-19683.txt  214541-20048.txt  214650-20103.txt  215021-20247.txt  215452-20620.txt  215957-21192.txt  223602-23085.txt
feedforward/logs/2018/02/23/: 091446-26801.txt  091559-26921.txt  093251-27523.txt  093327-27559.txt  094830-28615.txt  094928-28640.txt  095129-28705.txt  095750-28976.txt  113544-31015.txt  113630-31435.txt  114343-31762.txt  120848-1125.txt  121518-1673.txt  130034-2802.txt  133838-3489.txt  153010-2323.txt  175613-4216.txt  180017-4385.txt  181211-4711.txt  203044-2045.txt  204944-3323.txt
feedforward/logs/2018/03/01/: 135550-19138.txt  225723-4219.txt
feedforward/logs/2018/03/02/: 151200-7967.txt  151250-8002.txt  151334-8101.txt  151415-8217.txt
feedforward/logs/2018/03/03/: 002848-27263.txt
feedforward/logs/2018/03/12/: 160542-16494.txt  160555-16516.txt
feedforward/logs/2018/03/13/: 152209-18085.txt
feedforward/logs/2018/03/14/: 104331-6032.txt
feedforward/logs/2018/04/10/: 095620-4524.txt  100332-4804.txt  100533-4997.txt  100744-5179.txt  101718-5392.txt  102034-5501.txt  103204-6101.txt
feedforward/logs/2018/05/28/: 155446-32087.txt  155548-32281.txt  181302-14322.txt
feedforward/logs/sessions/: session-1-1-drum1.json  session-1-1-drum2.json  session-1-1-drum3.json  session-1-1-drum4.json  session-1-1-drum5.json  session-1-1-drum6.json  session-1-1-drum7.json  session-1-1-drum8.json  session-1-1-drum9.json  session-1-1-drumx.json  session-1-2-drum1.json  session-1-2-drum2.json  session-1-2-drum3.json  session-1-2-drum4.json  session-1-2-drum5.json  session-1-2-drum6.json  session-1-2-drum7.json  session-1-2-drum8.json  session-1-2-drum9.json  session-1-drum2.json  session-1-drum3.json  session-1-drum4.json  session-1-drum5.json  session-1-drum6.json  session-1-drum7.json  session-1-drum8.json  session-2-1-drum1.json  session-2-1-drum2.json  session-2-1-drum3.json  session-2-1-drum4.json  session-2-1-drum5.json  session-2-1-drum6.json  session-2-1-drum7.json  session-2-1-drum8.json  session-2-1-drum9.json  session-2-2-drum1.json  session-2-2-drum2.json  session-2-2-drum3.json  session-2-2-drum4.json  session-2-2-drum5.json  (+13 more)
feedforward/src/: Change.hs  Code.hs  Edit.hs  Main.hs  Parameters.hs  TidalHint.hs
feedforward/src/Drum/: Client.hs  Server.hs
tidal-core/: CHANGELOG.md  binds.md  tidal-core.cabal
tidal-core/src/Sound/: Tidal.hs
tidal-core/src/Sound/Tidal/: Bjorklund.hs  Chords.hs  Compose.hs  Control.hs  Core.hs  Event.hs  InstanceHacks.hs  Mininotation.hs  Params.hs  ParseBP.hs  Pattern.hs  Scales.hs  Sequence.hs  Show.hs  Signal.hs  Simple.hs  Span.hs  Stepwise.hs  TestUtils.hs  Time.hs  TimeSpan.hs  Types.hs  UI.hs  Utils.hs  Val.hs  Value.hs
tidal-core/src/Sound/Tidal/Pattern/: Types.hs
tidal-core/src/Sound/Tidal/Signal/: Input.hs  Random.hs  Waveform.hs
tidal-core/test/: Test.hs  TestUtils.hs
tidal-core/test/Sound/Tidal/: BjorklundTest.hs  ChordsTest.hs  ControlTest.hs  CoreTest.hs  EventTest.hs  ExceptionsTest.hs  MininotationTest.hs  ParamsTest.hs  ParseTest.hs  PatternTest.hs  ScalesTest.hs  SequenceTest.hs  SignalRandomTest.hs  SignalTest.hs  SpanTest.hs  StepwiseTest.hs  TestUtils.hs  TimeTest.hs  TypesTest.hs  UITest.hs  UtilsTest.hs
tidal-link/: README.md  Setup.hs  tidal-link.cabal
tidal-link/link/: .appveyor.yml  README.md
tidal-link/link/include/: CMakeLists.txt
tidal-link/link/include/ableton/link/: Controller.hpp
tidal-link/link/src/: CMakeLists.txt
tidal-link/link/src/ableton/link/: tst_CircularFifo.cpp  tst_LinearRegression.cpp
tidal-link/src/c/: link_wrapper.cpp  link_wrapper.h
tidal-link/src/hs/: Main.hs
tidal-link/src/hs/Sound/Tidal/: Clock.hs  Link.hs  Link.hsc
tidal-listener/: README.md  fake_gcc.sh  tidal-listener.cabal
tidal-listener/app/: Main.hs
tidal-listener/examples/: first.hs  first.hs-example
tidal-listener/src/Sound/Tidal/: Hint.hs  Listener.hs  Tidali.hs
tidal-listener/src/Sound/Tidal/Listener/: Command.hs  Config.hs  Parse.hs
tidal-params-dirt/: tidal-params-dirt.cabal
tidal-params-dirt/src/Sound/Tidal/Params/: Dirt.hs
tidal-params-dirt/test/: Test.hs
tidal-parse/: README.md  tidal-parse.cabal
tidal-parse-ffi/: .gitignore  CHANGELOG.md  README.md  tidal-parse-ffi.cabal
tidal-parse-ffi/src/Sound/Tidal/Parse/: FFI.hs
tidal-parse-ffi/test/: Test.hs
tidal-parse-ffi/test/Sound/Tidal/: TidalParseFFITest.hs
tidal-parse/src/Sound/Tidal/: Parse.hs
tidal-parse/src/Sound/Tidal/Parse/: ExpParser.hs  FFi.hs  TH.hs
tidal-parse/test/: Test.hs
tidal-parse/test/Sound/Tidal/: TidalParseTest.hs
tidal-stream/: tidal-stream.cabal
tidal-stream/src/Sound/Tidal/: Boot.hs  Config.hs  Stream.hs  StreamTypes.hs  Tempo.hs
tidal-stream/test/: Test.hs
tidal-tap/: CHANGELOG.md  tidal-tap.cabal
tidal-tap/app/: Main.hs
vis/: moved.txt  tidal-vis.cabal
vis/Sound/Tidal/: Cycle.hs  Vis.hs  Vis2.hs
vis/examples/: example.hs
(+333 files in other folders)
