name:                tidal
version:             1.7.10
synopsis:            Pattern language for improvised music
description:         Tidal is a domain specific language for live coding patterns.
homepage:            http://tidalcycles.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
Stability:           Experimental
Copyright:           (c) Alex McLean and other contributors, 2021
category:            Sound
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1, GHC == 9.0.1
data-files:          BootTidal.hs

Extra-source-files: README.md CHANGELOG.md tidal.el

library
  ghc-options: -Wall
  hs-source-dirs:
                 src

  default-language:    Haskell2010

  autogen-modules:     Paths_tidal

  Exposed-modules:     Sound.Tidal.Bjorklund
                       Sound.Tidal.Carabiner
                       Sound.Tidal.Chords
                       Sound.Tidal.Config
                       Sound.Tidal.Control
                       Sound.Tidal.Context
                       Sound.Tidal.Core
                       Sound.Tidal.EspGrid
                       Sound.Tidal.ID
                       Sound.Tidal.Params
                       Sound.Tidal.ParseBP
                       Sound.Tidal.Pattern
                       Sound.Tidal.Scales
                       Sound.Tidal.Safe.Context
                       Sound.Tidal.Safe.Boot
                       Sound.Tidal.Show
                       Sound.Tidal.Simple
                       Sound.Tidal.Stream
                       Sound.Tidal.Tempo
                       Sound.Tidal.Time
                       Sound.Tidal.Transition
                       Sound.Tidal.UI
                       Sound.Tidal.Utils
                       Sound.Tidal.Version
                       Paths_tidal
  Build-depends:
      base >=4.8 && <5
    , containers < 0.7
    , colour < 2.4
    , hosc >= 0.17 && < 0.20
    , text < 1.3
    , parsec >= 3.1.12 && < 3.2
    , network < 3.2
    , bifunctors < 5.6
    , transformers >= 0.5 && < 0.5.7
    , bytestring < 0.12
    , clock < 0.9
    , deepseq >= 1.1.0.0
    , primitive < 0.8
    , random < 1.3
    , exceptions < 0.11
    , mtl >= 2.2

executable tidal
  hs-source-dirs: main
  main-is: Main.hs
  build-depends: base >=4.8 && < 5
               , tidal
               , hint < 0.10
               , exceptions < 0.11
               , async < 2.3
  default-language:    Haskell2010
    
test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  other-modules: Sound.Tidal.ControlTest
                 Sound.Tidal.CoreTest
                 Sound.Tidal.ParamsTest
                 Sound.Tidal.ParseTest
                 Sound.Tidal.PatternTest
                 Sound.Tidal.ScalesTest
                 Sound.Tidal.ChordsTest
                 Sound.Tidal.StreamTest
                 Sound.Tidal.UITest
                 Sound.Tidal.UtilsTest
                 Sound.Tidal.ExceptionsTest
                 TestUtils
  build-depends:
                base ==4.*
              , microspec >= 0.2.0.1
              , hosc >= 0.17 && < 0.20
              , containers
              , parsec
              , tidal
              , deepseq

  default-language: Haskell2010

-- not useful for automation since it requires running sclang
test-suite dontcrash
  type: exitcode-stdio-1.0
  main-is: dontcrash.hs
  hs-source-dirs: test
  build-depends: base, tidal
  default-language:    Haskell2010

benchmark bench-speed
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench/Speed
  other-modules: Tidal.PatternB
                 Tidal.CoreB
                 Tidal.UIB
                 Tidal.Inputs
  build-depends:
                base == 4.*
              , criterion
              , tidal
  ghc-options: -Wall

  default-language: Haskell2010

benchmark bench-memory
  type:    exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench/Memory
  other-modules: Tidal.UIB
                 Tidal.Inputs
  build-depends:
               base == 4.*
             , weigh
             , tidal
  ghc-options: -Wall

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tidalcycles/Tidal
