cabal-version:       2.0

name:                tidal
version:             2.0.0-pre
synopsis:            Pattern language for improvised music
description:         Tidal is a domain specific language for live coding patterns.
homepage:            http://tidalcycles.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
Stability:           Experimental
Copyright:           (c) Alex McLean and other contributors, 2021
category:            Sound
build-type:          Simple
tested-with:         GHC == 8.4.4, GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1, GHC == 9.0.1
data-files:          BootTidal.hs

Extra-source-files: README.md CHANGELOG.md tidal.el

library
  ghc-options: -Wall
  hs-source-dirs:
                 src

  default-language:    Haskell2010

  autogen-modules:     Paths_tidal

  Exposed-modules:
                       Sound.Tidal.Arc
                       Sound.Tidal.Bjorklund
                       Sound.Tidal.Boot
                       Sound.Tidal.Chords
                       Sound.Tidal.Config
                       Sound.Tidal.Signal.Control
                       Sound.Tidal.Context
                       -- Sound.Tidal.Core
                       Sound.Tidal.ID
                       Sound.Tidal.Params
                       Sound.Tidal.ParseBP
                       Sound.Tidal.Pattern
                       Sound.Tidal.Scales
                       -- Sound.Tidal.Safe.Context
                       -- Sound.Tidal.Safe.Boot
                       Sound.Tidal.Sequence
                       Sound.Tidal.Show
                       Sound.Tidal.Signal.Base
                       Sound.Tidal.Signal.Compose
                       Sound.Tidal.Signal.ComposeExtra
                       Sound.Tidal.Signal.Event
                       Sound.Tidal.Signal.Random
                       Sound.Tidal.Signal.Waveform
                       -- Sound.Tidal.Simple
                       Sound.Tidal.Stream
                       Sound.Tidal.StreamTypes
                       Sound.Tidal.Tempo
                       Sound.Tidal.Time
                       Sound.Tidal.Types
                       -- Sound.Tidal.Transition
                       -- Sound.Tidal.UI
                       Sound.Tidal.Utils
                       Sound.Tidal.Value
                       Sound.Tidal.Version
                       Paths_tidal
  Build-depends:
      base >=4.8 && <5
    , containers < 0.7
    , colour < 2.4
    , hosc >= 0.20 && < 0.21
    , text < 2.1
    , parsec >= 3.1.12 && < 3.2
    , network < 3.2
    , transformers >= 0.5 && < 0.7
    , bytestring < 0.12
    , clock < 0.9
    , deepseq >= 1.1.0.0
    , primitive < 0.9
    , random < 1.3
    , exceptions < 0.11
    , mtl >= 2.2
    , tidal-link == 1.0.1

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  other-modules:
                 -- Sound.Tidal.ControlTest
                 -- Sound.Tidal.CoreTest
                 -- Sound.Tidal.ParamsTest
                 -- Sound.Tidal.ParseTest
                 -- Sound.Tidal.PatternTest
                 -- Sound.Tidal.ChordsTest
                 -- Sound.Tidal.StreamTest
                 -- Sound.Tidal.UITest
                 -- Sound.Tidal.ExceptionsTest
                 Sound.Tidal.ArcTest
                 Sound.Tidal.ChordsTest
                 Sound.Tidal.EventTest
                 Sound.Tidal.ExceptionsTest
                 Sound.Tidal.ParamsTest
                 Sound.Tidal.ParseBPTest
                 Sound.Tidal.ScalesTest
                 Sound.Tidal.SignalBaseTest
                 Sound.Tidal.SignalComposeTest
                 Sound.Tidal.SignalControlTest
                 Sound.Tidal.SignalRandomTest
                 Sound.Tidal.StreamTest
                 Sound.Tidal.TimeTest
                 Sound.Tidal.TypesTest
                 Sound.Tidal.UtilsTest
                 Sound.Tidal.ValueTest
                 Sound.Tidal.WaveformTest
                 TestUtils
  build-depends:
                base ==4.*
              , microspec >= 0.2.0.1
              , hosc >= 0.20 && < 0.21
              , containers
              , parsec
              , tidal
              , deepseq

  default-language: Haskell2010

-- not useful for automation since it requires running sclang
test-suite dontcrash
  type: exitcode-stdio-1.0
  main-is: dontcrash.hs
  hs-source-dirs: test
  build-depends: base, tidal
  default-language:    Haskell2010

benchmark bench-speed
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench/Speed
  other-modules: Tidal.PatternB
                 Tidal.CoreB
                 Tidal.UIB
                 Tidal.Inputs
  build-depends:
                base == 4.*
              , criterion
              , tidal
  ghc-options: -Wall

  default-language: Haskell2010

benchmark bench-memory
  type:    exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench/Memory
  other-modules: Tidal.UIB
                 Tidal.Inputs
  build-depends:
               base == 4.*
             , weigh
             , tidal
  ghc-options: -Wall

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tidalcycles/Tidal
