cabal-version:       2.0

name:                tidal
version:             1.10.0
synopsis:            Pattern language for improvised music
description:         Tidal is a domain specific language for live coding patterns.
homepage:            http://tidalcycles.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
Stability:           Experimental
Copyright:           (c) Alex McLean and other contributors, 2021
category:            Sound
build-type:          Simple
tested-with:         GHC == 8.6.5, GHC == 8.8.3, GHC == 8.10.1, GHC == 9.0.1, GHC == 9.4.8, GHC == 9.8.2
data-files:          BootTidal.hs

Extra-source-files: README.md CHANGELOG.md tidal.el

library
  ghc-options: -Wall
  hs-source-dirs:
                 src

  default-language:    Haskell2010

  autogen-modules:     Paths_tidal

  Exposed-modules:     Sound.Tidal.Bjorklund
                       Sound.Tidal.Boot
                       Sound.Tidal.Chords
                       Sound.Tidal.Control
                       Sound.Tidal.Context
                       Sound.Tidal.Core
                       Sound.Tidal.ID
                       Sound.Tidal.Params
                       Sound.Tidal.ParseBP
                       Sound.Tidal.Pattern
                       Sound.Tidal.Scales
                       Sound.Tidal.Safe.Context
                       Sound.Tidal.Safe.Boot
                       Sound.Tidal.Show
                       Sound.Tidal.Simple
                       Sound.Tidal.Stepwise
                       Sound.Tidal.Stream
                       Sound.Tidal.Stream.Config
                       Sound.Tidal.Stream.Listen
                       Sound.Tidal.Stream.Main
                       Sound.Tidal.Stream.Process
                       Sound.Tidal.Stream.Target
                       Sound.Tidal.Stream.Types
                       Sound.Tidal.Stream.UI
                       Sound.Tidal.Time
                       Sound.Tidal.Transition
                       Sound.Tidal.UI
                       Sound.Tidal.Utils
                       Sound.Tidal.Version
                       Paths_tidal
  Build-depends:
      base >=4.8 && <5
    , containers < 0.8
    , colour < 2.4
    , hosc >= 0.20 && < 0.21
    , text < 2.2
    , parsec >= 3.1.12 && < 3.2
    , network < 3.3
    , transformers >= 0.5 && < 0.7
    , bytestring < 0.13
    , clock < 0.9
    , deepseq >= 1.1.0.0
    , primitive < 0.10
    , random < 1.3
    , exceptions < 0.11
    , mtl >= 2.2
    , tidal-link == 1.0.4

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs:
      test
  ghc-options: -Wall
  other-modules: Sound.Tidal.ControlTest
                 Sound.Tidal.CoreTest
                 Sound.Tidal.ParamsTest
                 Sound.Tidal.ParseTest
                 Sound.Tidal.PatternTest
                 Sound.Tidal.ScalesTest
                 Sound.Tidal.ChordsTest
                 Sound.Tidal.StreamTest
                 Sound.Tidal.UITest
                 Sound.Tidal.UtilsTest
                 Sound.Tidal.ExceptionsTest
                 TestUtils
  build-depends:
                base ==4.*
              , microspec >= 0.2.0.1
              , hosc >= 0.20 && < 0.21
              , containers
              , parsec
              , tidal
              , deepseq

  default-language: Haskell2010

-- not useful for automation since it requires running sclang
test-suite dontcrash
  type: exitcode-stdio-1.0
  main-is: dontcrash.hs
  hs-source-dirs: test
  build-depends: base, tidal
  default-language:    Haskell2010

benchmark bench-speed
  type:             exitcode-stdio-1.0
  main-is:          Main.hs
  hs-source-dirs:   bench/Speed
  other-modules: Tidal.PatternB
                 Tidal.CoreB
                 Tidal.UIB
                 Tidal.Inputs
  build-depends:
                base == 4.*
              , criterion >= 1.6.3.0
              , tidal
  ghc-options: -Wall

  default-language: Haskell2010

benchmark bench-memory
  type:    exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: bench/Memory
  other-modules: Tidal.UIB
                 Tidal.Inputs
  build-depends:
               base == 4.*
             , weigh
             , tidal
  ghc-options: -Wall

  default-language: Haskell2010

source-repository head
  type:     git
  location: https://github.com/tidalcycles/Tidal
