name:           feedforward
version:        0.0.2
copyright:      2025 Alex McLean and contributors
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10

library
executable feedforward
  main-is: Main.hs
  hs-source-dirs:
      src
  ghc-options: -Wall -threaded
  build-depends:
      aeson
    , base
    , directory
    , exceptions
    , filepath
    , hint
    , hosc
    , mtl
    , hscurses >= 1.5.0.0
    , network
    , optparse-applicative
    , text
    , tidal
    , tidal-core
    , time
    , unix
    , websockets
    , transformers
    , containers
    , PortMidi
  other-modules:
      Change
      Parameters
      -- Client
      Edit
      Code
      -- Server
      TidalHint
      Paths_feedforward
  default-language: Haskell2010
  -- ld-options: -Wl,-rpath -Wl,$ORIGIN/libs
