cabal-version:      3.0
name:               tidal-core

version:            2.0.0.0

-- A short (one-line) description of the package.
synopsis: Domain Specific Language for live coding patterns

-- description:

-- URL for the project homepage or repository.
homepage:           https://tidalcycles.org/

-- The license under which the package is released.
license:            GPL-3.0-or-later

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Alex McLean

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         alex@slab.org

copyright: (c) Alex McLean and contributors
category:           Sound
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-orphans

library
    -- Import common warning flags.
    import:           warnings

    autogen-modules:     Paths_tidal_core
  
    -- Modules exported by the library.
    exposed-modules:  Sound.Tidal
                      Sound.Tidal.Bjorklund
                      Sound.Tidal.Chords
                      Sound.Tidal.Compose
                      Sound.Tidal.Event
                      Sound.Tidal.InstanceHacks
                      Sound.Tidal.Mininotation
                      Sound.Tidal.Params
                      Sound.Tidal.Pattern
                      Sound.Tidal.Sequence
                      Sound.Tidal.Show
                      Sound.Tidal.Signal
                      Sound.Tidal.Signal.Input
                      Sound.Tidal.Signal.Random
                      Sound.Tidal.Signal.Waveform
                      Sound.Tidal.TestUtils
                      Sound.Tidal.Time
                      Sound.Tidal.Span
                      Sound.Tidal.Types
                      Sound.Tidal.Utils
                      Sound.Tidal.Value
                      Paths_tidal_core

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base
                    , deepseq
                    , containers
                    , colour
                    , parsec
                    , microspec
                    

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite tidal-core-test
--    import:           warnings
    ghc-options: -Wall 
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Test.hs
    other-modules:
        Sound.Tidal.ChordsTest
        Sound.Tidal.EventTest
        Sound.Tidal.ExceptionsTest
        Sound.Tidal.MininotationTest
        Sound.Tidal.SpanTest
    build-depends:
        base
      , tidal-core
      , microspec >= 0.2.0.1
      , parsec
      , deepseq
      , containers
