cabal-version: 2.0

name: tidal-core
version: 1.10

license: GPL-3
copyright:           (c) Alex McLean and other contributors, 2025
synopsis:            Core pattern library for TidalCycles, a pattern language for improvised music
description:         Tidal is a domain specific language for live coding patterns. This is a pre-release ahead of version 1.10, which will become a dependency of the main tidal package, with the same version number.
homepage:            http://tidalcycles.org/
maintainer:          Alex McLean <alex@slab.org>, Matthew Kaney, Martin Gius
license-file:        LICENSE
category: Sound
build-type: Simple

tested-with:
  GHC == 8.6.5,
  GHC == 8.8.4,
  GHC == 8.10.7,
  GHC == 9.0.2,
  GHC == 9.4.8,
  GHC == 9.8.2

library
  ghc-options: -Wall
  hs-source-dirs: src
  default-language: Haskell2010

  exposed-modules:
    Sound.Tidal.Bjorklund
    Sound.Tidal.Chords
    Sound.Tidal.Control
    Sound.Tidal.Core
    Sound.Tidal.Params
    Sound.Tidal.ParseBP
    Sound.Tidal.Pattern
    Sound.Tidal.Pattern.Types
    Sound.Tidal.Scales
    Sound.Tidal.Show
    Sound.Tidal.Simple
    Sound.Tidal.Stepwise
    Sound.Tidal.Time
    Sound.Tidal.UI
    Sound.Tidal.Utils

  build-depends:
    base >=4.8 && <5,
    containers <0.9,
    colour <2.4,
    text <2.2,
    parsec >=3.1.12 && <3.2,
    deepseq >=1.1.0.0 && < 1.7

test-suite tests
  type: exitcode-stdio-1.0
  main-is: Test.hs
  hs-source-dirs: test
  ghc-options: -Wall
  default-language: Haskell2010

  other-modules:
    Sound.Tidal.ControlTest
    Sound.Tidal.CoreTest
    Sound.Tidal.ParamsTest
    Sound.Tidal.ParseTest
    Sound.Tidal.PatternTest
    Sound.Tidal.ScalesTest
    Sound.Tidal.ChordsTest
    Sound.Tidal.StepwiseTest
    Sound.Tidal.UITest
    Sound.Tidal.UtilsTest
    Sound.Tidal.ExceptionsTest
    TestUtils

  build-depends:
    base >=4 && <5,
    hspec >=2.11.9,
    containers,
    tidal-core,
    deepseq

source-repository head
  type: git
  location: https://github.com/tidalcycles/Tidal
