cabal-version:       3.4
name:                tidal-link
version:             0.0.1
synopsis:            Ableton Link integration for Tidal
-- description:
homepage:            http://tidalcycles.org/
license:             GPL-3.0-only
license-file:        LICENSE
author:              Pierre Krafft
maintainer:          Pierre Krafft <kpierre@outlook.com>, Alex McLean <alex@slab.org>
Stability:           Experimental
Copyright:           (c) Pierre Krafft and contributors, 2021
category:            Sound
build-type:          Custom
tested-with:         GHC == 9.2.1

extra-source-files: README.md

description: Ableton Link integration for Tidal, to let Tidal sync with external clocks

library
  ghc-options: -Wall
  hs-source-dirs: src/hs

  default-language:    Haskell2010

  Exposed-modules:     Sound.Tidal.Link

  Build-depends:
      base >=4.8 && <5

  extra-libraries:
      stdc++
      iphlpapi
      winmm
      ws2_32

  Build-depends:
      base >=4.8 && <5

source-repository head
  type:     git
  location: https://github.com/tidalcycles/Tidal

custom-setup
  setup-depends:
    base >=4.8 && <5,
    Cabal >= 3.2 && < 4,
    directory >=1.3 && <2,
    filepath >=1.4 && <2
