cabal-version:       >=1.10

name:                tidal-listener
version:             0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:             GPL-3
license-file:        LICENSE
author:              Lizzie Wilson and Alex McLean
maintainer:          alex@slab.org
-- copyright:
category:            Sound
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  hs-source-dirs:      src
  exposed-modules:     Sound.Tidal.Listener
                       Sound.Tidal.Listener.Config
                       Sound.Tidal.Listener.Parse
                       Sound.Tidal.Listener.Command
                       Sound.Tidal.Hint
  build-depends:       base,
                       filepath,
                       exceptions,
                       deepseq,
                       optparse-applicative,
                       tidal ==1.9.3,
                       hosc >= 0.20 && < 0.21,
                       hint,
                       network
  default-language:    Haskell2010
  ghc-options: -threaded
               -Wall
               -dynamic
               -- see: https://github.com/haskell-hint/hint/issues/156


executable tidal-listener
  main-is:             Main.hs
  build-depends:       base ==4.*,
                       tidal-listener,
                       optparse-applicative
  hs-source-dirs:       app
  default-language:    Haskell2010
  ghc-options: -threaded
               -Wall
               -dynamic
               -- see: https://github.com/haskell-hint/hint/issues/156
