cabal-version:      3.0
name:               tidal-params-dirt

version:            2.0.0.0

-- A short (one-line) description of the package.
synopsis: A collection of Tidal parameter definitions for SuperDirt and similar OSC endpoints

-- description:

-- URL for the project homepage or repository.
homepage:           https://tidalcycles.org/

-- The license under which the package is released.
license:            GPL-3.0-or-later

-- The file containing the license text.
license-file:       LICENSE

-- The package author(s).
author:             Alex McLean

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         alex@slab.org

copyright: (c) Alex McLean
category:           Sound
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
-- extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-orphans

library
    -- Import common warning flags.
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  Sound.Tidal.Params.Dirt

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:    base
                    , tidal-core

    -- Directories containing source files.
    hs-source-dirs:   src

    -- Base language which the package is written in.
    default-language: Haskell2010

